--- a/styles/style.css
+++ b/styles/style.css
@@ -16,26 +16,106 @@ header {
 
 li {
   display: inline-flex;
-  margin: 0 30px;
+  margin: 0 20px;
+  font-size: 15px;
 }
 
 h1 {
   text-align: center;
   padding-top: 200px;
+  font-size: 48px;
+  margin: 0;
 }
 
-h3 {
+.middle {
+  display: flex;
+  flex-direction: column;
+}
+
+.middle > h2 {
+  font-size: 26px;
+  text-align: center;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: space-around;
+}
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 25%;
+  padding: 1rem;
+}
+
+.icons > p {
+  max-width: 70%;
+}
+
+.icons > h3 {
   color: #00b172;
 }
 
 .top > p {
   text-align: center;
+  font-size: 20px;
+  font-weight: lighter;
 }
 
 .bottom {
   background-color: #00b172;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 30px;
 }
 
+.paragraph-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.text-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 50%;
+}
+
+.text-wrapper > h2 {
+  text-align: left;
+  font-size: 1.8 rem;
+  font-weight: lighter;
+  align-content: space-around;
+}
+
+.paragraph-wrapper > h4 {
+  text-align: left;
+  font-size: 1.2rem;
+  padding: 0.8rem 0 1rem 0;
+  margin: 0em;
+}
+
+.paragraph-wrapper > p {
+  text-align: left;
+  font-size: 0.9rem;
+  max-width: 70%;
+  line-height: 1.5rem;
+  font-weight: lighter;
+  margin: 0;
+}
+.logo-white {
+  padding: 2rem;
+}
+
+.kanye {
+  padding: 2rem;
+}
 /*
 Colors:
 
